--- a/form.html
+++ b/form.html
@@ -24,18 +24,21 @@
         <h1>Hubungi Kami</h1>
         <p>Silahkan isi form berikut untuk mengirim pesan kepada kami.</p>
 
-        <form id="contact-form">
-            <label for="name">Nama:</label>
-            <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Masukkan email Anda" required>
-
-            <label for="message">Pesan:</label>
-            <textarea id="message" name="message" rows="5" placeholder="Tulis pesan Anda" required></textarea>
-
-            <button type="submit">Kirim Pesan</button>
-        </form>
+        <form
+        action="https://formspree.io/f/xlgreqde"
+        method="POST"
+>
+        <label>
+        Your email:
+      <input type="email" name="email">
+    </label>
+    <label>
+    Your message:
+    <textarea name="message"></textarea>
+    </label>
+    <!-- your other form fields go here -->
+    <button type="submit">Send</button>
+    </form>
     </section>
 
     <footer>
