--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Galeri Bunga Authira Dwi Khairunnisa</p>
+        <p>&copy; 2025 Authira Dwi Khairunnisa</p>
     </footer>
 
     <script src="form.js"></script>
