--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="video-box">
         <div class="media-item">
-          <h3>Video 1</h3>
+          <h3>Video</h3>
           <video src="gagajah.mp4" controls></video>
         </div>
 
