--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
           <video src="gagajah.mp4" controls></video>
         </div>
 
+        <div class="video-box">
+        <div class="media-item">
+          <h3>Video</h3>
+          <video src="gagajah.mp4" controls></video>
+        </div>
+
       <div class="audio-box">
         <h3>Audio</h3>
         <audio controls>
