--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Fauna</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,17 +11,16 @@
   <header>
     <h1>Fauna</h1>
     <nav>
-      <ul>
-        <a href="index.html">Home</a>
-        <a href="nusantara.html">Fauna Nusantara</a>
-        <a href="spesies.html">Spesies</a>
-        <a href="form.html">Form</a>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="nusantara.html">Fauna Nusantara</a>
+      <a href="spesies.html">Spesies</a>
+      <a href="form.html">Form</a>
     </nav>
   </header>
 
   <section class="content">
 
+    <!-- Profile -->
     <div class="profile-card">
       <div class="profile-inner">
 
@@ -41,6 +40,7 @@
       </div>
     </div>
 
+    <!-- Media -->
     <div class="fauna-card">
       <h2>Media Fauna</h2>
 
@@ -49,17 +49,13 @@
           <h3>Video</h3>
           <video src="gagajah.mp4" controls></video>
         </div>
-
-        <div class="video-box">
-        <div class="media-item">
-          <h3>Video</h3>
-          <video src="gagajah.mp4" controls></video>
-        </div>
+      </div>
 
       <div class="audio-box">
         <h3>Audio</h3>
         <audio controls>
           <source src="kenari.mp3" type="audio/mpeg">
+          Browser Anda tidak mendukung audio.
         </audio>
       </div>
     </div>
